Small refactor